[gd_scene load_steps=5 format=3 uid="uid://c7c0v8av0fu0h"]

[ext_resource type="Script" path="res://ui/menu/main_menu.gd" id="1_u16n5"]
[ext_resource type="AudioStream" uid="uid://45upmuv34vpe" path="res://game_objects/effects/sounds/menu/menu_music_inavision_futuristic.ogg" id="2_00v2h"]

[sub_resource type="InputEventAction" id="InputEventAction_1sy1t"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_nn3ho"]
events = [SubResource("InputEventAction_1sy1t")]

[node name="MainMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)
script = ExtResource("1_u16n5")
menu_music_stream = ExtResource("2_00v2h")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="start_demo_button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["ui_button_sound"]]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "START DEMO"

[node name="load_button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["ui_button_sound"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_nn3ho")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "LOAD GAME"

[node name="options_button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["ui_button_sound"]]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "OPTIONS
"

[node name="credits_button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["ui_button_sound"]]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "CREDITS
"

[node name="quit_game_button" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer" groups=["ui_button_sound"]]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "QUIT GAME"

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/start_demo_button" to="." method="_on_start_demo_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/load_button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/quit_game_button" to="." method="_on_quit_game_button_pressed"]
